updated with pictures and attributions, fixed multiple layout issues

--- a/lesson05/assignment/css/style.scss
+++ b/lesson05/assignment/css/style.scss
@@ -11,9 +11,10 @@ body {
 
 .content-wrapper {
   max-width: 1440px;
+  min-height: 100vh;
   display: grid;
   justify-content: center;
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto auto 1fr auto;
   grid-template-columns: 1fr 3fr;
   grid-template-areas: "header header"
                         "nav nav"
@@ -47,16 +48,16 @@ body {
     flex-direction: row;
     justify-content: space-around;
     padding: 0;
-    margin: 0;
-    height: 100%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     li {
       background-color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: .4rem;
+      width: 6%;
       img {
-        width: 50px;
+        width: 100%;
         margin-bottom: .4rem;
       }
       a {
@@ -72,18 +73,32 @@ body {
 #sidebar {
   grid-area: sidebar;
   padding: 1rem;
+  padding-right: 3rem;
   img {
-    width: 80%
+    width: 100%;
   }
 }
 
 #main {
   grid-area: main;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
   .page-preview {
+    display: grid;
+    grid-template-columns: 8fr 13fr;
     border: 1px solid grey;
-    margin: 1rem 0 1rem 0;
+    margin: 1rem 1rem 1rem 0;;
+    padding: 1rem;
+    img {
+      width: 100%;
+      }
+    .page-preview-desc {
+      margin-left: 1rem;
+      h3 {
+        margin: 0;
+      }
+      .img-attr {
+        font-size: .6rem;
+      }
+    }
   }
 }
 
@@ -93,11 +108,20 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: blue;
+  background-color: black;
+  color: white;
+  p {
+    font-size: .8rem;
+  }
+  a {
+    color: white;
+  }
   nav {
     width: 50%;
+    margin: 1rem 0 1rem 0;
     ul {
-      width: 100;
+      padding: 0;
+      width: 100%;
       list-style-type: none;
       display: flex;
       flex-direction: row;
